tests/integration/snapshots/integration__conformance__y_string_uescaped_newline.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
["new\u000Aline"]
stdout ---
["new\u000Aline"]

stderr ---
